[tool.poetry]
name = "govee-lan-api"
version = "0.2.0"
description = "Implementation of the Govee LAN API to control supported Govee products"
authors = ["Ryan McDonough <Ryan@r2n.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "govee_lan_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
